[package]
name = "unlambda"
version = "0.1.0"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
edition = "2021"

[dependencies]
rc_stack = { path = "rc_stack" }
mimalloc = { version = "*", default-features = false, optional = true }
pico-args = { version = "*", features = ["eq-separator"] }

[profile.release]
codegen-units = 1
lto = true

[workspace]
